@@ -130,6 +130,7 @@ char **			tracker_metadata_get_registered_classes		(TrackerClient *client, GErro
 GPtrArray *	        tracker_metadata_get_unique_values              (TrackerClient *client, ServiceType service, char **meta_types, char *query, gboolean descending, int offset, int max_hits, GError **error);
 int	        tracker_metadata_get_sum                        (TrackerClient *client, ServiceType service, char *field, char *query, GError **error);
 int	        tracker_metadata_get_count                      (TrackerClient *client, ServiceType service, char *field, char *query, GError **error);
+GPtrArray *	        tracker_metadata_get_unique_values_with_count   (TrackerClient *client, ServiceType service, char **meta_types, char *query, char *count, gboolean descending, int offset, int max_hits, GError **error);
 
 GPtrArray *	tracker_keywords_get_list			(TrackerClient *client, ServiceType service, GError **error);
 char **		tracker_keywords_get				(TrackerClient *client, ServiceType service, const char *id, GError **error);
@@ -191,6 +192,7 @@ void		tracker_metadata_get_registered_classes_async 		(TrackerClient *client, Tr
 void		tracker_metadata_get_unique_values_async                (TrackerClient *client, ServiceType service, char **meta_types, const char *query, gboolean descending, int offset, int max_hits, TrackerGPtrArrayReply callback, gpointer user_data);
 void	        tracker_metadata_get_sum_async                          (TrackerClient *client, ServiceType service, char *field, char *query, TrackerIntReply callback, gpointer user_data);
 void	        tracker_metadata_get_count_async                        (TrackerClient *client, ServiceType service, char *field, char *query, TrackerIntReply callback, gpointer user_data);
+void		tracker_metadata_get_unique_values_with_count_async     (TrackerClient *client, ServiceType service, char **meta_types, const char *query, char *count, gboolean descending, int offset, int max_hits, TrackerGPtrArrayReply callback, gpointer user_data);
 
 void		tracker_keywords_get_list_async 			(TrackerClient *client, ServiceType service, TrackerGPtrArrayReply callback, gpointer user_data);
 void		tracker_keywords_get_async 				(TrackerClient *client, ServiceType service, const char *id, TrackerArrayReply callback, gpointer user_data);
